# ferri

./: .gitignore  AGENTS.md  CHAT.md  CLAUDE.md  COMMAND_MODIFIERS.md  Cargo.toml  GEMINI.md  LICENSE  POST_ALPHA_REGROUP.md  README.md  RUSTROVER.md  SCHEMA_ANALYSIS.md  anthropic_test_plan.md  aorta_DAG.xlsx  ascii-art-437.txt  ascii_logo.txt  ferri-run-debug.md  ferri_compendium.md  manual_e2e_test_plan.md  oktryitnow.md  openrouter_test_plan.md  reorganization_report.md  showtime.tape  triage_report.txt
ai_resources/: AI_GUIDE.md  ONBOARDING_GUIDE.md  demo_backlog.csv
crates/ferri-agent/: Cargo.toml  LICENSE
crates/ferri-agent/src/: agent.rs
crates/ferri-automation/: Cargo.toml  LICENSE
crates/ferri-automation/src/: execute.rs  executors.rs  expressions.rs  flow.rs  jobs.rs  lib.rs  models.rs  orchestrator.rs
crates/ferri-automation/tests/: flow_e2e_tests.rs  flow_schema_tests.rs
crates/ferri-core/: Cargo.toml  LICENSE
crates/ferri-core/src/: context.rs  lib.rs  message.rs  models.rs  project.rs  secrets.rs  traits.rs
development_resources/: command_modifiers.txt  index.txt  pdf_analysis_workflow.csv  product_versions.csv  rust_tools.txt
development_resources/ferri-do-proto/: Cargo.toml
development_resources/ferri-do-proto/src/: main.rs
development_resources/google_api_test/src/: main.rs
development_resources/logs/: gemini_streaming_fix_report.md  last_session.md  log-2025-09-17.txt
development_resources/treetrunk/: Cargo.toml
development_resources/treetrunk/src/: main.rs
docs/: README.md
docs/archive/: STATE_OF_FLOW.md
docs/archive/proposed_flows/: 01-text-analysis-flow.md  02-ai-summarization-flow.md  05-ai-code-refactor-pipeline.yml  06-workspace-pipeline-flow.md  09-image-composition-flow.md
docs/project/development_logs/: ferri-do-fix-diagnosis.md  ferri_with_debugging_guide.md  last_session.md  log-2025-11-30.txt
docs/project/product_planning/: mergeable_backlog.csv
docs/qa/: long_running_jobs_walkthrough.md
docs/reports/: Rust AI CLI Multimodal Refactor Plan.txt
docs/user_guide/examples/: coded-poem.txt  poem.txt
docs/user_guide/walkthroughs/: long_running_gemini_walkthrough.md
dubious_docs/md/arch_review/: flow_architecture_review.md
dubious_docs/md/outdated_manual_testing/: flow_pipeline_test_plan.md  local_process_flow_test_plan.md
dubious_docs/other/orphaned_flows/: pdf_education_branching_flow.yml
examples/: example-flow.yml
examples/proposed_flows/: 01-text-analysis-flow.md  01-text-analysis-flow.yml  02-ai-summarization-flow.md  02-ai-summarization-flow.yml  03-simulated-conditional-flow.md  03-simulated-conditional-flow.yml  04-parallel-merge-flow.md  04-parallel-merge-flow.yml  05-ai-code-refactor-pipeline.md  05-ai-code-refactor-pipeline.yml  06-workspace-pipeline-flow.md  06-workspace-pipeline-flow.yml  07-multi-language-build-flow.md  07-multi-language-build-flow.yml  08-data-pipeline-flow.md  08-data-pipeline-flow.yml  09-image-composition-flow.md  09-image-composition-flow.yml
ferri-cli/: Cargo.toml
ferri-cli/src/: agent_tui.rs  flow_monitor_tui.rs  flow_run_tui.rs  main.rs  main.rs.bak  ps_tui.rs
ferri-cli/src/tui/: app.rs  mod.rs  runner.rs
ferri-cli/src/tui/widgets/: cpu_widget.rs  memory_widget.rs  mod.rs  network_widget.rs  process_widget.rs
ferri-cli/tests/: cli.rs  ctx.rs  flow.rs  init.rs  interop.rs  interop.rs.disabled  models.rs  ps.rs  run.rs  run_with.rs  secrets.rs  with.rs  yank.rs
ferri-core/: Cargo.toml
ferri-core/src/: agent.rs  context.rs  execute.rs  flow.rs  jobs.rs  lib.rs  logging.rs  models.rs  secrets.rs
ferri-core/src/flow/: tui.rs
ferri-do/: Cargo.toml
l2-tests/: Cargo.toml
l2-tests/tests/: background_jobs.rs  run_command.rs
pm/: .~lock.sprint_backlog.csv#  branching-flow-example.yml  code_review_flow.yml  gemini_code_review.yml  git-style-branching-flow.yml  jira_sync.py  pdf_to_education_flow.yml  sample-flow-complex.yml  sample-flow-simple.yml  sprint_backlog.csv
project_resources/: aorta_DAG.csv  quick_test.md
project_resources/ai_resources/: ONBOARDING_GUIDE.md
project_resources/development_resources/: help_commands_demo.txt  index.md  sample_help_command.txt
project_resources/development_resources/google_api_test/: Cargo.toml
project_resources/development_resources/logs/: last_session.md  log-2025-09-10-20-03-14.txt  log-2025-09-17.txt  log-2025-09-19.txt
project_resources/engineering/: ferri_flow_schema_specification_and_generation_guide.md  flow_architecture_review.md  flow_engine_design_evolution.md  session-summary-2025-10-27.md
project_resources/engineering/architectural_decision_records/: adr-002-async-job-submission.md  adr-003-unified-flow-logging-and-monitoring.md
project_resources/engineering/demos/: image_generation_flow.yml  merge_test_flow.yml
project_resources/pm/: demo_script.py  epics.csv  project_backlog.csv  sprint_backlog.csv
project_resources/pm/l1_verification/: POST_ALPHA_L1_CHECK.md
project_resources/product/planning/: SPRINT_GUIDE.md
project_resources/qa/: context_test_plan.md  flow_pipeline_test_plan.md
project_resources/quality/: README.md  agentic_do_walkthrough.md  ferri_run_refactor_demo.md  l1_manual_test_plan.md  uat_flow_engine_refactor.md
project_resources/quality/L1/: init_and_secrets_test_plan.md  models_test_plan.md
project_resources/quality/L2/: TESTING_NOTES.md  flow_schema_manual_test_plan.md  l2_manual_test_plan.md  uat_flow_engine_refactor.md
project_resources/quality/L3/: unified_flow_test_plan.md
project_resources/quality/examples/: gemini_code_review_walkthrough.md
project_resources/sandbox/dodo/: error_calculator.py  main.py
qa/: contour_detection_walkthrough.md  flow_pipeline_test_plan.md  gemini_code_review_walkthrough.md  hybrid_model_test_plan.md  image_editing_walkthrough.md  image_generation_test_plan.md  image_generation_walkthrough.md  l1_interop_test_plan.md  local_process_flow_test_plan.md  long_running_gemini_walkthrough.md  long_running_jobs_walkthrough.md  models_test_plan.md  multimodal_test_plan.md  with_test_plan.md
sandbox/: gemini_meetup.html
(+61 files in other folders)
