[package]
name = "ferri-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferri"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ferri-core = { path = "../ferri-core" }
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
