[package]
name = "ferri-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferri"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ferri-core = { path = "../ferri-core" }
tokio = { version = "1.37.0", features = ["full"] }
ratatui = { version = "0.26.3", features = ["all-widgets"] }
crossterm = "0.27.0"
chrono = "0.4.38"
crossbeam-channel = "0.5.15"
atty = "0.2.14"
serde_json = "1.0.117"
shell-escape = "0.1.5"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
