[package]
name = "ferri-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferri"
path = "src/main.rs"

[dependencies]
ferri-core = { path = "../crates/ferri-core" }
ferri-automation = { path = "../crates/ferri-automation" }
ferri-agent = { path = "../crates/ferri-agent" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
reqwest = "0.12"
serde_json = "1.0"
serde_yaml = "0.9.34"
shell-escape = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
crossbeam-channel = "0.5"
colored = "3.0.0"
rand.workspace = true
syntect = "5.3.0"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
