[package]
name = "ferri-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
magic-crypt = "3.1.13"
reqwest = { version = "0.12", features = ["blocking", "json"] }
pathdiff = "0.2.1"
rand = "0.8"
sysinfo = "0.30"
nix = { version = "0.28", features = ["process", "signal"] }
serde_yaml = "0.9"
atty = "0.2.14"
ratatui = "0.26.1"
crossterm = "0.27.0"
crossbeam-channel = "0.5.12"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10.1"