[package]
name = "ferri-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
ferri-core = { path = "../ferri-core" }
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.27"
nix = { version = "0.28", features = ["signal"] }
petgraph = "0.6"
rand = "0.8"
ratatui = { version = "0.26", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
sysinfo = "0.30"
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
