[package]
name = "ferri-do-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
# For parsing command-line arguments
clap = { version = "4.5.4", features = ["derive"] }

# For building and managing the graph data structure
petgraph = "0.6.5"

# For adding color to terminal output
colored = "2.1.0"

# For async runtime and HTTP requests
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }

# For structured JSON and plans
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# For ergonomic error handling
anyhow = "1.0.82"

